2011-07-27  Sam Steingold  <sds@gnu.org>

	fix mingw compilation
	* modules/syscalls/calls.c: when the portability is ensured by
	gnulib, use ANSIC_error; when we use WIN32_NATIVE functions
	directly, use OS_error
	(POSIX:MKSTEMP) [WIN32_NATIVE]: use _get_osfhandle to convert the
	return value of gnulib mkstemp() to a windows file handle
	Include <shldisp.h> & <shlguid.h> for CLSID_ShellLink &
	IID_IShellLink
	* modules/regexp/Makefile.in (NO_CXX): removed unused variable

2011-07-27  Sam Steingold  <sds@gnu.org>

	* spvw_ctype.d (init_ctype): add "#ifdef LC_MESSAGES" for mingw

2011-07-26  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): use AC_MSG_ERROR instead of setting
	variables to bad values

2011-07-26  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): add select

2011-07-26  Sam Steingold  <sds@gnu.org>

	revert last patch; fix the gnulib defines in a more robust way:
	change C names for Lisp symbols to avoid clashes with the C world
	Suggested by Bruno
	* undef-gnulib.h: remove
	* Makefile.devel, makemake.in: remove undef-gnulib.h
	* spvwtabf.d, spvwtabo.d, spvwtabs.d: do not include undef-gnulib.h
	* constsym.d, eval.d, io.d, package.d, pathname.d, stream.d,
	* subr.d, time.d (read): rename to readL
	(listen): ... listenL
	(write): ... writeL
	(sleep): ... psleep
	(time): ... pptime
	(close): ... closeL
	Thanks to Yaroslav Kavenchuk for extensive testing

2011-07-25  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/undef-gnulib.h): new target
	(gnulib-imported): call it at the end
	* spvwtabf.d, spvwtabo.d, spvwtabs.d: include undef-gnulib.h after
	lispbibl to undefine the lisp symbols redefined by gnulib
	* makemake.in: link undef-gnulib.h into the build directory
	(spvwtab*.o): depend on undef-gnulib.h
	* undef-gnulib.h: new file, regenerated on each gnulib-imported

2011-07-25  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_DECOLONIZE): even when $ac_cv_build is mingw, use